[tool.poetry]
name = "company-blog"
version = "0.1.0"
description = ""
authors = ["Isabela"]
readme = "README.md"
packages = [{include = "company_blog"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-Dance = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
