[tool.poetry]
name = "company-blog"
version = "0.1.0"
description = ""
authors = ["Isabela"]
readme = "README.md"
packages = [{include = "company_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-Dance = "^7.0.0"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
flask-login = "^0.6.2"
flask-wtf = "^1.1.1"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
